baseline/apps/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
